--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.263.1",
-    "@vercel/speed-insights": "^1.0.10"
+    "@vercel/speed-insights": "^1.0.10",
+    "@vercel/analytics": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
