--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2",
     "lucide-react": "^0.263.1",
     "@vercel/speed-insights": "^1.0.10",
     "@vercel/analytics": "^1.2.2"
